; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_scsi_pm.c_scsi_runtime_idle.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_scsi_pm.c_scsi_runtime_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"scsi_runtime_idle\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @scsi_runtime_idle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scsi_runtime_idle(%struct.device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  %4 = load %struct.device*, %struct.device** %3, align 8
  %5 = call i32 @dev_dbg(%struct.device* %4, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call i64 @scsi_is_sdev_device(%struct.device* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.device*, %struct.device** %3, align 8
  %11 = call i32 @pm_runtime_mark_last_busy(%struct.device* %10)
  %12 = load %struct.device*, %struct.device** %3, align 8
  %13 = call i32 @pm_runtime_autosuspend(%struct.device* %12)
  %14 = load i32, i32* @EBUSY, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %9
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @dev_dbg(%struct.device*, i8*) #1

declare dso_local i64 @scsi_is_sdev_device(%struct.device*) #1

declare dso_local i32 @pm_runtime_mark_last_busy(%struct.device*) #1

declare dso_local i32 @pm_runtime_autosuspend(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
